--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<h3 class="text-center">Adding new Article</h3>
+<h3 class='text-center'> Adding New Article</h3>
 
 <div class="row">
   <div class="col-med-12">
