Add validations to Article

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,14 +26,14 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </nav>  
     </header>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-            <%= flash.each do |key, message| %>
+          <% flash.each do |key, message| %>
             <div class="text-center alert alert-<%= key == 'notice'? 'success': 'danger' %>">
-              <% message %>
+              <%= message %>
             </div>
           <% end %>
           <%= yield %>
