--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -44,7 +44,7 @@
       </div>
     <% end %>
   
-    <div class='form-group'>
+    <div class="form-group">
       <div class='col-md-offset-3 col-md-9 sign-link'>
         <%= render "devise/shared/links" %>
       </div>
